--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <!-- Products will be inserted here -->
   </main>
   <footer>
-    &copy; 2024 Zanspiw Store &nbsp;&bull;&nbsp; All rights reserved
+    &copy; 2024 Roizz official Store &nbsp;&bull;&nbsp; All rights reserved
   </footer>
 
 <script>
